Fix z-index issue.

--- a/jsin/extension/frontend/style/dashboard.css
+++ b/jsin/extension/frontend/style/dashboard.css
@@ -78,8 +78,6 @@ a {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	
-	z-index: 100;
 }
 
 .rulesets.empty #add-ruleset {
